Particle settings keyframes not showing in Graph Editor channels #62057

Closed
opened 2019-02-28 18:29:36 +01:00 by Pablo Vazquez · 5 comments
Member

System Information
Operating system: Ubuntu 18.04
Graphics card: NVIDIA Quadro 6000

Blender Version
Broken: 2cd478cf19 (current master)

Short description of error

The channels list in the Graph Editor is not showing most keyframes. In the screenshot and attached .blend file you can see how Seed shows up, butLifetime* doesn't.
{F6731511, size=full}

Another strange thing is that Seed is showing under 'CubeAction' (also ChildSeed if you have children particles), but then there's a ParticleSettings channel with nothing inside.

Exact steps for others to reproduce the error

Thanks!

**System Information** Operating system: Ubuntu 18.04 Graphics card: NVIDIA Quadro 6000 **Blender Version** Broken: 2cd478cf1971 (current master) **Short description of error** The channels list in the Graph Editor is not showing *most* keyframes. In the screenshot and attached .blend file you can see how **Seed* shows up, but**Lifetime** doesn't. {[F6731511](https://archive.blender.org/developer/F6731511/image.png), size=full} Another strange thing is that Seed is showing under 'CubeAction' (also ChildSeed if you have children particles), but then there's a ParticleSettings channel with nothing inside. **Exact steps for others to reproduce the error** * Open .blend file (with Load UI turned on), it should be clear when the Cube is selected. [bug_no_fcurves_for_particles.blend](https://archive.blender.org/developer/F6731532/bug_no_fcurves_for_particles.blend) Thanks!
Author
Member

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez
Joshua Leung was assigned by Pablo Vazquez 2019-02-28 18:30:09 +01:00
Member

Interesting, the FILTER_PART_OBJD(psys->part) in animdata_filter_ds_particles() seems to be borked. A quick workaround for now (if it's an urgent production issue) is to just short-circuit that check (i.e. replace with 1)

Further investigation reveals that the expand setting isn't even supported in the animchannel defines anymore (e.g. see acf_dspart_setting_ptr() - the ACHANNEL_SETTING_EXPAND case returns NULL). I suspect what's happening here is that since we weren't originally going to bring back particles (or something like that, but then changed our mind later), these hooks got knocked out. As a result, the channels in question just get hidden behind the collapsed expander, unable to be seen, and unable to be expanded/unhidden.

Interesting, the `FILTER_PART_OBJD(psys->part)` in `animdata_filter_ds_particles()` seems to be borked. A quick workaround for now (if it's an urgent production issue) is to just short-circuit that check (i.e. replace with 1) Further investigation reveals that the expand setting isn't even supported in the animchannel defines anymore (e.g. see `acf_dspart_setting_ptr()` - the `ACHANNEL_SETTING_EXPAND` case returns NULL). I suspect what's happening here is that since we weren't originally going to bring back particles (or something like that, but then changed our mind later), these hooks got knocked out. As a result, the channels in question just get hidden behind the collapsed expander, unable to be seen, and unable to be expanded/unhidden.

This issue was referenced by 2bad126999

This issue was referenced by 2bad126999b2094e685fb8599bb4d39b76a38a2e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

That was so fast! I'm currently animating dozens of different objects and particle settings. This saves so much time and pain. Thank you so much!

That was so fast! I'm currently animating dozens of different objects and particle settings. This saves so much time and pain. Thank you so much!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62057
No description provided.